# src/main/resources/config/openapi.yaml
@@ -474,7 +474,7 @@ paths:
       security:
       - portal_auth:
         - "portal.w"
-  /services/modules:
+  /services/module:
     get:
       summary: "Query the active modules for a particular instance"
       description: "Returns a list of active modules from the target server"
@@ -533,6 +533,40 @@ paths:
       responses:
         "200":
           description: "successful operation"
+        "400":
+          description: "Invalid request"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Status"
+        "404":
+          description: "Service not found"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Status"
+      security:
+      - portal_auth:
+        - "portal.w"
+  /services/shutdown:
+    post:
+      summary: "Shutdown the target service instance to force a restart."
+      description: "Returns a JSON body of shutdown time"
+      operationId: "postServiceShutdown"
+      requestBody:
+        description: "Protocal, Address and Port"
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ServerShutdownRequest"
+      responses:
+        "200":
+          description: "successful operation"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ServerShutdownResponse"
         "400":
           description: "Invalid request"
           content:
@@ -815,6 +849,51 @@ components:
       - "address"
       - "port"
       - "modules"
+    ServerShutdownRequest:
+      type: "object"
+      properties:
+        protocol:
+          type: "string"
+          description: "Target server protocol"
+        address:
+          type: "string"
+          description: "Target server IP address"
+        port:
+          type: "integer"
+          description: "Target server port number"
+      required:
+      - "protocol"
+      - "address"
+      - "port"
+    ServerShutdownResponse:
+      type: "object"
+      properties:
+        time:
+          type: "integer"
+          format: "int64"
+          description: "Server shutdown time"
+        protocol:
+          type: "string"
+          description: "Target server protocol"
+        address:
+          type: "string"
+          description: "Target server IP address"
+        port:
+          type: "integer"
+          description: "Target server port number"
+        serviceId:
+          type: "string"
+          description: "a unique ID for the service"
+        tag:
+          type: "string"
+          description: "an environment tag assigned to the service"
+      required:
+      - "time"
+      - "protocol"
+      - "address"
+      - "port"
+      - "serviceId"
+      - "tag"
     Status:
       type: "object"
       properties:
